@@ -1782,23 +1782,6 @@ gtk_source_completion_get_view (GtkSourceCompletion *self)
 }
 
 /**
- * gtk_source_completion_finish_completion:
- * @self: The #GtkSourceCompletion
- *
- * This function finish the completion if it is active (visible).
- */
-void
-gtk_source_completion_finish_completion (GtkSourceCompletion *self)
-{
-	g_return_if_fail (GTK_IS_SOURCE_COMPLETION (self));
-
-	if (GTK_WIDGET_VISIBLE (self))
-	{
-		end_completion (self);
-	}
-}
-
-/**
  * gtk_source_completion_filter_proposals:
  * @self: the #GtkSourceCompletion
  * @func: function to filter the proposals visibility
