@@ -102,11 +102,6 @@ gboolean	 gtk_source_completion_remove_trigger		(GtkSourceCompletion *self,
 GtkSourceCompletionTrigger
 		*gtk_source_completion_get_active_trigger	(GtkSourceCompletion *self);
 
-/*gboolean	 gtk_source_completion_trigger_event		(GtkSourceCompletion *self,
-								 GtkSourceCompletionTrigger *trigger);*/
-
-void		 gtk_source_completion_finish_completion	(GtkSourceCompletion *self);
-
 void		 gtk_source_completion_filter_proposals		(GtkSourceCompletion *self,
 								 GtkSourceCompletionFilterFunc func,
 								 gpointer user_data);
