@@ -1,3 +1,9 @@
+2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/gtksourcecompletion.c:
+	* gtksourceview/gtksourcecompletion.h:
+	Remove gtk_source_completion_finish_completion.
+
 2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
 
 	* gtksourceview/gtksourceview-marshal.list:
